// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailAdressenVerblijfsobject should render \`Nee\` if aanduiding in onderzoek is \`false\` and show a red bullet 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Verblijfsobject label"
  title="Adres (verblijfsobject)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Status:
        Status omschrijving
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Indicatie geconstateerd
      </Notification>
    </li>
    <MapDetailAdressenVerblijfsobjectGebruiksdoelenItem
      gebruiksdoelen={
        Array [
          Object {
            "code": "01",
            "description": "Gebruiksdoel description 1",
          },
          Object {
            "code": "0400",
            "description": "Gebruiksdoel description 2",
            "descriptionPlus": "Gebruiksdoel description plus",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Feitelijk gebruik"
      link={false}
      value="horeca"
    />
    <MapDetailResultStatusItem
      label="Status"
      status="alert"
      value="Status omschrijving"
    />
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status=""
      value="Nee"
    />
    <MapDetailResultStatusItem
      label="Indicatie hoofdadres"
      status=""
      value="Ja"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Oppervlakte"
      link={false}
      value="onbekend"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailAdressenVerblijfsobject should render \`Nee\` if indicatie geconstateerd is \`false\` and show a red bullet 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Verblijfsobject label"
  title="Adres (verblijfsobject)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Status:
        Status omschrijving
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        In onderzoek
      </Notification>
    </li>
    <MapDetailAdressenVerblijfsobjectGebruiksdoelenItem
      gebruiksdoelen={
        Array [
          Object {
            "code": "01",
            "description": "Gebruiksdoel description 1",
          },
          Object {
            "code": "0400",
            "description": "Gebruiksdoel description 2",
            "descriptionPlus": "Gebruiksdoel description plus",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Feitelijk gebruik"
      link={false}
      value="horeca"
    />
    <MapDetailResultStatusItem
      label="Status"
      status="alert"
      value="Status omschrijving"
    />
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status=""
      value="Nee"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Indicatie hoofdadres"
      status=""
      value="Ja"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Oppervlakte"
      link={false}
      value="onbekend"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailAdressenVerblijfsobject should render \`Nee\` if is nevenadres is \`true\` and show a blue bullet 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Verblijfsobject label"
  title="Adres (verblijfsobject)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="info"
      >
        Dit is een nevenadres
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Indicatie geconstateerd
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        In onderzoek
      </Notification>
    </li>
    <MapDetailAdressenVerblijfsobjectGebruiksdoelenItem
      gebruiksdoelen={
        Array [
          Object {
            "code": "01",
            "description": "Gebruiksdoel description 1",
          },
          Object {
            "code": "0400",
            "description": "Gebruiksdoel description 2",
            "descriptionPlus": "Gebruiksdoel description plus",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Feitelijk gebruik"
      link={false}
      value="horeca"
    />
    <MapDetailResultStatusItem
      label="Status"
      status=""
      value="Status omschrijving"
    />
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Indicatie hoofdadres"
      status="info"
      value="Nee"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Oppervlakte"
      link={false}
      value="onbekend"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailAdressenVerblijfsobject should render everything 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Verblijfsobject label"
  title="Adres (verblijfsobject)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Status:
        Status omschrijving
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Indicatie geconstateerd
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        In onderzoek
      </Notification>
    </li>
    <MapDetailAdressenVerblijfsobjectGebruiksdoelenItem
      gebruiksdoelen={
        Array [
          Object {
            "code": "01",
            "description": "Gebruiksdoel description 1",
          },
          Object {
            "code": "0400",
            "description": "Gebruiksdoel description 2",
            "descriptionPlus": "Gebruiksdoel description plus",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Feitelijk gebruik"
      link={false}
      value="horeca"
    />
    <MapDetailResultStatusItem
      label="Status"
      status="alert"
      value="Status omschrijving"
    />
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Indicatie hoofdadres"
      status=""
      value="Ja"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Oppervlakte"
      link={false}
      value="15 m²"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailAdressenVerblijfsobject should render unknown with zero value for size 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Verblijfsobject label"
  title="Adres (verblijfsobject)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Status:
        Status omschrijving
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Indicatie geconstateerd
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        In onderzoek
      </Notification>
    </li>
    <MapDetailAdressenVerblijfsobjectGebruiksdoelenItem
      gebruiksdoelen={
        Array [
          Object {
            "code": "01",
            "description": "Gebruiksdoel description 1",
          },
          Object {
            "code": "0400",
            "description": "Gebruiksdoel description 2",
            "descriptionPlus": "Gebruiksdoel description plus",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Feitelijk gebruik"
      link={false}
      value="horeca"
    />
    <MapDetailResultStatusItem
      label="Status"
      status="alert"
      value="Status omschrijving"
    />
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Indicatie hoofdadres"
      status=""
      value="Ja"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Oppervlakte"
      link={false}
      value="onbekend"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailAdressenVerblijfsobject should render unknown without size 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Verblijfsobject label"
  title="Adres (verblijfsobject)"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Indicatie geconstateerd
      </Notification>
    </li>
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        In onderzoek
      </Notification>
    </li>
    <MapDetailAdressenVerblijfsobjectGebruiksdoelenItem
      gebruiksdoelen={
        Array [
          Object {
            "code": "01",
            "description": "Gebruiksdoel description 1",
          },
          Object {
            "code": "0400",
            "description": "Gebruiksdoel description 2",
            "descriptionPlus": "Gebruiksdoel description plus",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Feitelijk gebruik"
      link={false}
      value="horeca"
    />
    <MapDetailResultStatusItem
      label="Status"
      status=""
      value="Status omschrijving"
    />
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
    <MapDetailResultStatusItem
      label="Indicatie hoofdadres"
      status=""
      value="Ja"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Oppervlakte"
      link={false}
      value="onbekend"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;
